Prevent collapsing during loading.

--- a/packages/blocks-next/src/blocks/product-template/style.scss
+++ b/packages/blocks-next/src/blocks/product-template/style.scss
@@ -1,3 +1,7 @@
+.wp-block-surecart-product-template {
+	width: 100%; // prevent collapsing during loading.
+}
+
 .sc-product-item {
 	height: 100%;
 	box-sizing: border-box;
